tests/parsing/invalid/invalid_instance_name_definitive_instantiation/bus.fbd
type my_bus bus
	mask some_type
